added set values

--- a/src/log14106.html
+++ b/src/log14106.html
@@ -36,6 +36,16 @@
   <td>0</td>
   <td>Wenn der Eingang eine 1 empfängt, werden die Fahrzeugdaten von MyRenault abgefragt.</td>
  </tr>
+ <tr>
+  <td>Klimatisierung E/A</td>
+  <td>0</td>
+  <td>Eine 1 am Eingang startet die Klimatisierung, eine 0 beendet sie</td>
+ </tr>
+ <tr>
+  <td>Laden Start</td>
+  <td>0</td>
+  <td>Eine 1 startet den Ladevorgang.</td>
+ </tr>
 </table>
 
 <h2>Ausgänge</h2>
