fix: local variable 'gigyaJWTToken' referenced before assignment

--- a/src/log14106.html
+++ b/src/log14106.html
@@ -128,12 +128,21 @@
 
 <h3>Change Log</h3>
 <ul>
-  <li>v0.01
+  <li>v0.3
+    <ul>
+	  <li>Fix: local variable 'gigyaJWTToken' referenced before assignment</li>
+	</ul>
+  </li>
+  <li>v0.2
+    <ul>
+	  <li>Query-Funktionen hinzugefügt</li>
+	</ul>
+  </li>
+  <li>v0.1
     <ul>
 	  <li>Initial</li>
 	</ul>
   </li>
-
 </ul>
 
 <h3>Open Issues / Known Bugs</h3>
