--- a/src/log14106.html
+++ b/src/log14106.html
@@ -131,6 +131,7 @@
   <li>v0.3
     <ul>
 	  <li>Fix: local variable 'gigyaJWTToken' referenced before assignment</li>
+	  <li>Kontext auf "14106_Zoe" geändert</li>
 	</ul>
   </li>
   <li>v0.2
