Temp AC as input value

--- a/src/log14106.html
+++ b/src/log14106.html
@@ -130,6 +130,11 @@
 <ul>
   <li>v0.3
     <ul>
+	  <li>Temperatur der Vorklimatisierung als Eingangsgröße</li>
+	</ul>
+  </li>
+  <li>v0.3
+    <ul>
 	  <li>Fix: local variable 'gigyaJWTToken' referenced before assignment</li>
 	  <li>Kontext auf "14106_Zoe" geändert</li>
 	</ul>
